// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message rendering 1`] = `
<DocumentFragment>
  <div
    class="message"
  >
    <div
      class="header"
    >
      <h2>
        Testing
      </h2>
    </div>
    <div
      class="content"
    >
      <p>
        Message content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message rendering with a close button 1`] = `
<DocumentFragment>
  <div
    class="message"
  >
    <div
      class="header"
    >
      <h2>
        Testing
      </h2>
      <button>
        <span
          data-component="XSquare"
          data-props="{}"
        />
         Close
      </button>
    </div>
    <div
      class="content"
    >
      <p>
        Message content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message rendering with icon 1`] = `
<DocumentFragment>
  <div
    class="message"
  >
    <div
      class="header"
    >
      Sample icon SVG
      <h2>
        Testing
      </h2>
    </div>
    <div
      class="content"
    >
      <p>
        Message content
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Message rendering with type 1`] = `
<DocumentFragment>
  <div
    class="message error"
  >
    <div
      class="header"
    >
      <span
        data-component="AlertOctagon"
        data-props="{}"
      />
      <h2>
        Testing
      </h2>
    </div>
    <div
      class="content"
    >
      <p>
        Message content
      </p>
    </div>
  </div>
</DocumentFragment>
`;
